<resources>
    <string name="app_name">ChallengChapterEnam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name</string>
    <string name="username">Username</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="movienih">Movienih.</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="loading">LOADING.....</string>
    <string name="welcome">Welcome,</string>
    <string name="home">Home</string>
    <string name="loremipsum">LoremIpsum</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="rating">rating</string>
    <string name="movielanguage">Movie Language</string>
    <string name="moviedate">Movie Date</string>
    <string name="judulfilm">Judul Film</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="bahasa">Bahasa :</string>
    <string name="tanggal_rilis">Tanggal Rilis :</string>
    <string name="no_data">Tidak ada data untuk ditampilkan !</string>
    <string name="hapus_film_fav">Berhasil menghapus film !</string>

    <string name="button">Click Button</string>
    <string name="title">Logout</string>
    <string name="dialogMsg">Do you want to Logout ? </string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="movie_languge">Movie Languge</string>
    <string name="movie_date">Movie Date</string>
    <string name="judul_film">Judul Film</string>
    <string name="movie_image">Movie Image</string>
    <string name="movie_rating">Movie Rating</string>
    <string name="success_login">Berhasil Masuk !</string>
    <string name="failed_login">Username atau password salah !</string>
    <string name="empty_login_input">Tidak boleh kosong !</string>
    <string name="success_reg">Berhasil mendaftarkan akun baru !</string>
    <string name="pass_tidak_sesuai">Password tidak sesuai !</string>


    <string name="film_favoritmu">Film Favoritmu</string>
    <string name="profile">Profile</string>
    <string name="tambah_film_fav">Berhasil menambahkan ke favorit !</string>
</resources>